Fixed body gap on image view

--- a/frontend/assets/style/bootstrap.styl
+++ b/frontend/assets/style/bootstrap.styl
@@ -30,5 +30,6 @@ body
   color: #788378
   font-weight: 300
   overflow-x: hidden
+  padding: 0 !important
 
 
